--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
             <br>
             <section>
                 <P id="Introduccion"> 
-                    Estudiante de Ingeniería Industrial y Sistemas IX ciclo, 
-                    cuento con una buena actitud para adaptarme a los cambios, 
-                    con la habilidad de organizar las actividades de un proceso a través de flujogramas, 
-                    con facilidad de palabra, alto sentido de la responsabilidad, 
-                    respeto y dedicación en los puestos encomendados.
+                    Estudiante de Ingeniería Industrial y Sistemas - IX ciclo, 
+                    con facilidad para adaptarse a los cambios, habilidad de 
+                    planificar y organizar actividades, alto sentido de la responsabilidad, 
+                    respeto y dedicación en los puestos encomendados
                 </P>
             <main class="Contenido">
                 <h2 class="Titulos"> 
@@ -68,27 +67,12 @@
                         Planificación y orden al realizar las actividades encomendadas<br>
                         Excelente capacidad de liderazgo<br>
                         Buena capacidad para adaptarse a los cambios<br>
-                        Resolver problemas complejos<br>
                         Buena capacidad de comunicación, tanto verbal como escrita<br>
                     </td>
                 </table>
                 <h2> 
-                    Información Adicional                     
-                </h2>
-                <table class="DetallesContenido">
-                    <tr>
-                        <th rowspan="5">2021 – 2022  </th>
-                        <th>
-                            Vicepresidente de IEEE UDEP Piura
-                        </th>
-                    </tr>
-                    <tr>              
-                        <td>
-                            IEEE significa instituto de ingenieros y electrónicos,
-                            la rama de UDEP campus Piura está conformada por jóvenes 
-                            que buscan llevar la tecnología al servicio de la humanidad.   
-                        </td>
-                </table>  
+                    Logros                     
+                </h2> 
                 <table class="DetallesContenido">
                     <tr>
                         <th rowspan="5">2020 – actualidad</th>
@@ -98,8 +82,11 @@
                     </tr>
                     <tr>              
                         <td>
-                            Ayni Educativo es un proyecto social que nació por la pandemia, 
-                            brinda clases gratuitas y de calidad a niños y jóvenes a nivel nacional  
+                            Ayni Educativo es un proyecto social que brinda clases gratuitas 
+                            y de calidad a niños y jóvenes a nivel nacional. En mi área nos 
+                            encargamos de buscar empresas e instituciones que brinden becas, 
+                            postular a concursos, elaborar diagramas de flujo sobre los procesos, 
+                            entre otros.
                         </td>
                 </table>  
                 <table class="DetallesContenido">
@@ -127,8 +114,9 @@
                     Informatica                     
                 </h2>
                 <ul>
-                    MS Office. Manejo básico-intermedio de Excel, Word, Power Point <br>
-                    Photoshop. Manejo básico<br>
+                    MS Office. Manejo básico-intermedio<br>
+                    Microsoft Visio. Nivel básico<br>
+                    Bizagi. Nivel básico
                 </ul>
                 <h2> 
                     Presentacion                     
